--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 		</div>	
         <div class="row">
 		    <div class="col-md-6">
-                <a class="portfolio-item" href="#">
+                <a class="portfolio-item" href="https://docs.google.com/presentation/d/e/2PACX-1vQZ1Y-ZGKV49ouUOPiHmX6tsqVr1PKs4hOkiJSdzV08fntJs_pIKJs-LS00lxUpjv4MYAw1QsMdH_pI/pub?start=false&loop=false&delayms=3000">
                     <div class="portfolio-thumb">
                         <img src="img/CorpProj_Button.png" alt="">
                     </div>
