--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				 I am a people person and a data lover. I rise to meet the challenge of helping organizations gather, analyze and leverage data to drive change. Competitive advantage and innovation will be achieved by those able to draw insight from the vast amount of available data. I want to be part of a team that approaches this challenge with curiosity, tenacity and humility.
                 </p>
 				<div class="section-title">
-                    <h2>Define: Data Sciencist</h2>
+                    <h2>Define: Data Scientist</h2>
                 </div>
 				<p>
                   A data scientist is skilled at taking messy real world data, extracting meaning and developing a compelling story that effectively influences the intended audience. Through a combination of academic and professional experience, I've cultivated a technical toolbelt for rising to this task.
