--- a/index.html
+++ b/index.html
@@ -181,6 +181,13 @@
         </div>
         <!--.row-->
         <div class="row">
+		<div class="col-md-12">
+		<div class="content-item">
+		    <small>September 2019-Current</small>
+		    <h3>Data Scientist</h3>
+		    <h4>Decentrix Inc</h4>
+		    <p>Denver, CO</p>
+		</div>
             <div class="col-md-12">
                 <div class="content-item">
                     <small>Summer 2018</small>
