--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@
             </div>
         </div>
         <!--.row-->
-        <div class="row">
-		<div class="content-item">
-		    <small>September 2019-Current</small>
-		    <h3>Data Scientist</h3>
-		    <h4>Decentrix Inc</h4>
-		    <p>Denver, CO</p>
-		</div>
+                <div class="content-item">
+                    <small>Summer 2018</small>
+                    <h3>Business Intelligence Intern</h3>
+                    <h4>Wayfair</h4>
+                    <p>Boston, MA</p>
+                </div>
+                <!-- .experience-item -->
                 <div class="content-item">
                     <small>Summer 2018</small>
                     <h3>Business Intelligence Intern</h3>
