--- a/index.html
+++ b/index.html
@@ -180,13 +180,8 @@
             </div>
         </div>
         <!--.row-->
-                <div class="content-item">
-                    <small>Summer 2018</small>
-                    <h3>Business Intelligence Intern</h3>
-                    <h4>Wayfair</h4>
-                    <p>Boston, MA</p>
-                </div>
-                <!-- .experience-item -->
+        <div class="row">
+            <div class="col-md-12">
                 <div class="content-item">
                     <small>Summer 2018</small>
                     <h3>Business Intelligence Intern</h3>
